tests/bad_programs/parse_errors/trailing_comma_in_decl.nc
int main() {
    string s, t, u, ;
    return 0;
}
